<resources>
    <string name="app_name">Line Deposit BD</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="ar_cable_network">AR Cable Network</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_address">Full address</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
    <string name="refer_code">Refer code</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="mac_address">MAC Address</string>
    <string name="create_account">Create Account</string>
    <string name="submit_your_youtube_video">Submit your youtube video</string>
    <string name="income">Income</string>
    <string name="referal_link">Referal Link</string>
    <string name="home">Home</string>
    <string name="submit">Submit</string>
    <string name="submit_your_youtube_video_link">Submit your youtube video link</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="show_transactions">Show transactions</string>
    <string name="payment_type">Payment type</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="amount">Amount</string>
    <string name="bkash">BKash</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_process">Transaction Process</string>
    <string name="date">Date</string>
    <string name="withdraw_request">Withdraw Request</string>
    <string name="deposit_request">Deposit Request</string>
    <string name="accept">Accept</string>
    <string name="save">Save</string>
    <string name="change_transaction_number">Change Transaction Number</string>
    <string name="reference_username_if_any">Reference username (if any)</string>
    <string name="logout">Logout</string>
    <string name="add_new_user">Add New User</string>
    <string name="add">Add</string>
    <string name="transaction_process_name">Transaction Process Name</string>
    <string name="affiliate">Affiliate</string>
    <string name="add_new_affiliate">Add New Affiliate</string>
    <string name="add_affiliate_s_user">Add Affiliate\'s User</string>
    <string name="show_affiliate_s_members">Show Affiliate\'s Members</string>
    <string name="affiliate_username">Affiliate Username</string>
    <string name="please_send_money_on">Please send money on </string>
    <string name="minimum_transaction_limit">Minimum Transaction Limit</string>
    <string name="change_transaction_limit">Change Transaction Limit</string>
    <string name="contact_us">Contact us</string>
    <string name="please_contact_on">Please contact on</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="transaction_number">Transaction Number</string>
    <string name="affiliate_percent">Affiliate Percent</string>
    <string name="advertisement">Advertisement</string>
</resources>