<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_account_box_24"
        />

    <item
        android:id="@+id/create_account"
        android:title="@string/create_account"
        android:icon="@drawable/ic_baseline_account_box_24"
        />

    <item
        android:id="@+id/submit_youtube_video"
        android:title="@string/submit_your_youtube_video"
        android:icon="@drawable/ic_baseline_account_box_24"
        />

    <item
        android:id="@+id/income"
        android:title="@string/income"
        android:icon="@drawable/ic_baseline_account_box_24"
        />
    <item
        android:id="@+id/referal_link"
        android:title="@string/referal_link"
        android:icon="@drawable/ic_baseline_account_box_24"
        />
</menu>