<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>

        <variable
            name="transaction"
            type="com.line_deposit.test.bd.model.Transaction" />

        <variable
            name="user"
            type="com.line_deposit.test.bd.model.User" />

    </data>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.username}"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.password}"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_number"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/mobile_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{transaction.mobileNumber}"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction_id"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/transaction_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{transaction.transactionId}"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(transaction.amount)}"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction_type"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/transaction_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{transaction.transactionType}"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_type"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/payment_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{transaction.paymentType.toString()}"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" : "
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{transaction.date}"
                        android:textSize="15sp"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    >

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="120sp"
                        android:layout_height="wrap_content"
                        android:text="@string/accept"
                        android:backgroundTint="@color/green"
                        android:layout_alignParentStart="true"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="120sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Reject"
                        android:backgroundTint="@color/red"
                        android:layout_alignParentEnd="true"
                        />

                </RelativeLayout>
            </LinearLayout>



        </androidx.cardview.widget.CardView>


</layout>